# sales-intelligence-platform

./: .gitignore  AGENTIC_SYSTEM_PLAYBOOK.md  AGENT_BUILD_GUIDE.md  ARCHITECTURE.md  DEMO_SCRIPT.md  RoofLeads_Presentation.pptx  TASK.md  generate_presentation.py  main.py  pyproject.toml  ~$RoofLeads_Presentation.pptx
backend/: .env.example  DOCUMENTATION.md  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: chat.py  leads.py  pipeline.py  schemas.py
backend/app/db/: database.py  models.py
backend/app/pipeline/: cli.py  contact_enrichment.py  enricher.py  prompts.py  research.py  scoring.py  scraper.py
backend/app/services/: chat_service.py  lead_service.py
backend/data/: sample_contractors.json
backend/tests/: conftest.py  test_api.py  test_certifications.py  test_citations.py  test_enricher.py  test_lead_service.py  test_models.py  test_parse_contractor.py  test_prompts.py  test_research.py  test_store_contractors.py
backend/tests/fixtures/: coveo_response.json
frontend/: package-lock.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/pipeline/: page.tsx
frontend/src/components/chat/: ChatPanel.tsx
frontend/src/components/dashboard/: FilterBar.tsx  LeadRow.tsx  LeadTable.tsx  StatsBar.tsx
frontend/src/components/lead-detail/: ContactCard.tsx  DraftEmail.tsx  InsightsGrid.tsx  LeadHeader.tsx  ResearchSummary.tsx  ScoreBreakdown.tsx  TalkingPoints.tsx  WhyNowBanner.tsx
frontend/src/components/ui/: CertBadge.tsx  CopyButton.tsx  ScorePill.tsx  (+2 more)
frontend/src/lib/: api.ts  constants.ts  types.ts  utils.ts
(+1 files in other folders)
